# gta5rphouses

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  apartment_coords.json  docker-compose.yml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  start.bat
app/: __init__.py  main.py  run_all.py  run_bot.py  run_realestate.py  run_scraper.py
app/api/: __init__.py  routes.py  server.py
app/config/: __init__.py  settings.py
app/database/: __init__.py  models.py  repository.py  session.py
app/scraper/: __init__.py  anti_detect.py  change_detector.py  crash_detector.py  playwright_scraper.py  realestate_client.py  realestate_detector.py  realestate_scheduler.py  scheduler.py
app/services/: tax.py
app/telegram/: __init__.py  bot.py  notifier.py
docker/: Dockerfile  entrypoint.sh  requirements.txt
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: ApartmentDetail.js  (+3 more)
migrations/: env.py
migrations/versions/: 001_initial.py  002_realestate.py  003_realestate_owner_history.py  004_realestate_subscriptions.py  005_user_server_selection.py  006_subscription_class_name.py
scripts/: check_classes.py  check_vzp_owners.py  clean_freed.py
tests/: conftest.py  test_api.py  test_bot_keyboards.py  test_change_detector.py  test_config.py  test_notifier_routing.py  test_payday_report.py  test_realestate_detector.py  test_realestate_gate.py  test_repository.py  test_scheduler_logic.py  test_server_selection.py  test_subscriptions.py
